--- a/onboarding.html
+++ b/onboarding.html
@@ -18,7 +18,7 @@
             <div class = "pic">
               <img src = "1.png" width = 250px;>
             </div>
-            <label class = "title">Keep track of your health</label>
+            <label class = "title">Keep track of your healthy lifestyle</label>
             <label class = "summary">Track and log your mental and physical symptoms to keep track of how you feel</label>
           </div>
            <div class = "writeup">
