--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="pic">
           <img src="1.png" width=250px;>
         </div>
-        <label class="title">Keep track of your health</label>
+        <label class="title">TESTING Keep track of your health</label>
         <label class="summary">Track and log mental and physical symptoms to keep track of how you feel</label>
       </div>
       <div class="writeup">
