--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,7 @@
                   </div>
                   <div class="field btn">
                      <div class="btn-layer"></div>
-                     <input type="submit" value="Sign up">
+                     <input type="submit" value="Sign up" onclick="location.href = 'profileinfo.html?#'">
                   </div>
                </form>
             </div>
