--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,7 @@
 		<label class = "summary" >“Amazing great awesome<br> motivational quote here”</label>
 		
 		
-		<a class="gradient-button gradient-button-2" href ="#" id="log">Log your symptoms</a><br />
+		<a class="gradient-button gradient-button-2" href ="#intern.html" id="log">Log your symptoms</a><br />
 		<div class = "avatar">
 			<img class="logo" src="avatar.png" width = "100px">
 		</div>
