--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,7 @@
 		<label class = "summary" >“Amazing great awesome<br> motivational quote here”</label>
 		
 		
-		<a class="gradient-button gradient-button-2" href ="#intern.html" id="log">Log your symptoms</a><br />
+		<a class="gradient-button gradient-button-2" href ="#" id="log">Log your symptoms</a><br />
 		<div class = "avatar">
 			<img class="logo" src="avatar.png" width = "100px">
 		</div>
@@ -100,7 +100,7 @@
 				<div class = "icon"><img src="goals.png" width = "30px" ></div>
 				<label>Goals</label>
 			</div>
-			<div class="button" onclick = "location.href='insight.html';">
+			<div class="button" onclick = "location.href='intern.html';">
 				<div class = "icon"><img src="insight.png" width = "30px"></div>
 				<label>Insight</label>
 			</div>
