changed profile info

--- a/checkup.html
+++ b/checkup.html
@@ -42,7 +42,7 @@
 			</div>
 			<div class="button" onclick = "location.href='profile.html';">
 				<div class = "icon"><img src="profile.png" width = "30px"></div>
-				<label>Profile</label>
+				<label>Log history</label>
 			</div>
 		</div>
 	</div>
