--- a/homepage.html
+++ b/homepage.html
@@ -110,7 +110,7 @@
 			</div>
 			<div class="button" onclick = "location.href='profile.html';">
 				<div class = "icon"><img src="profile.png" width = "30px"></div>
-				<label>Log History</label>
+				<label>Log History Test</label>
 			</div>
 		</div>
 	</div>
