updating prifile icon

--- a/insight.html
+++ b/insight.html
@@ -22,6 +22,15 @@
 		<label class = "profilename">Insights</label>
 	</div>
 </div>
+
+
+
+
+<div class = profilepic>
+	<img class = "logo" src="matthew.png" width = "100px">
+</div>
+
+
 	<div class = "contentwrap">
 		<div class = "nav">
 			<div class="button" onclick = "location.href='homepage.html';">
