--- a/insight.html
+++ b/insight.html
@@ -9,25 +9,19 @@
   <title>Insight</title>
 </head>
 <body style="background:#E5E5E5;display: grid;">
-	<div class = contentwrap>
-	<div class = "wrapper" id = "checkup">
-		<label class = "profilename">Check up</label>
+
+<!--trying to add profile pic-->
+<div class = "contentwrap">
+	<div class = "wrapper" id = "profileinfo">
+		<div class ="profile">
+			<div class = "username">Hi, Matthew</div>
+			
+		</div>
+
 	</div>
-	<div class = "wrapper" id = "goals">
-		<label class = "profilename">Goals</label>
-	</div>
-</div>
-   <div class = contentwrap>
-	<div class = "wrapper" id = "insights">
-		<label class = "profilename">Insights</label>
-	</div>
-</div>
-
-
-
-
-<div class = profilepic>
-	<img class = "logo" src="matthew.png" width = "100px">
+	<div class = profilepic>
+			<img class = "logo" src="matthew.png" width = "100px">
+		</div>
 </div>
 
 
