--- a/homepage.html
+++ b/homepage.html
@@ -100,7 +100,7 @@
 				<div class = "icon"><img src="goals.png" width = "30px" ></div>
 				<label>Goals</label>
 			</div>
-			<div class="button" onclick = "location.href='internz.webflow/intern.html';">
+			<div class="button" onclick = "location.href='insight.html';">
 				<div class = "icon"><img src="insight.png" width = "30px"></div>
 				<label>Insight</label>
 			</div>
