--- a/insight.html
+++ b/insight.html
@@ -13,12 +13,16 @@
 <!--trying to add profile pic-->
 <div class = "contentwrap">
 	<div class = "wrapper" id = "profileinfo">
+		<div class ="profile">
+			<!--div class = "username">Hi, Matthew</div>-->
+			
+		</div>
+
 	</div>
 	<div class = profilepic>
 			<img class = "logo" src="matthew.png" width = "100px">
 		</div>
 </div>
-
 
 	<div class = "contentwrap">
 		<div class = "nav">
