--- a/insight.html
+++ b/insight.html
@@ -13,8 +13,8 @@
 <!--trying to add profile pic-->
 <div class = "contentwrap">
 	<div class = "wrapper" id = "profileinfo">
-		<div class ="profile">
-			<!--div class = "username">Hi, Matthew</div>-->
+		<div class ="Title">
+			<div class = "username">Insights and Correlation</div>
 			
 		</div>
 
