--- a/insight.html
+++ b/insight.html
@@ -12,8 +12,8 @@
 
 <!--trying to add profile pic-->
 <div class = "contentwrap">
-	<div class = "wrapper" id = "profileinfo">
-		<div class ="insight">
+	<div class = "wrapper" id = "insight">
+		<div class ="Insights">
 			<div class = "username">Insights and Correlation</div>
 			
 		</div>
