--- a/insight.html
+++ b/insight.html
@@ -13,7 +13,7 @@
 <!--trying to add profile pic-->
 <div class = "contentwrap">
 	<div class = "wrapper" id = "insights">
-		<div class ="Insights">
+		<div class ="insights">
 			<div class = "username">Insights and Correlation</div>
 			
 		</div>
