--- a/insight.html
+++ b/insight.html
@@ -13,10 +13,10 @@
 <!--trying to add profile pic-->
 <div class = "contentwrap">
 	<div class = "wrapper" id = "insights">
-		<div class ="insights">
+		<!--div class ="insights">-->
 			<div class = "username">Insights and Correlation</div>
 			
-		</div>
+		
 
 	</div>
 	<div class = profilepic>
