--- a/insight.html
+++ b/insight.html
@@ -12,6 +12,8 @@
 
 <!--trying to add profile pic-->
 <div class = "contentwrap">
+	<div class = "wrapper" id = "insights">
+	
 			<div class = "username">Insights and Correlation</div>
 
 	</div>
