--- a/insight.html
+++ b/insight.html
@@ -12,7 +12,7 @@
 
 <!--trying to add profile pic-->
 <div class = "contentwrap">
-	<div class = "wrapper" id = "insights">
+	<div class = insights>
 	
 			<div class = "username">Insights and Correlation</div>
 
