--- a/insight.html
+++ b/insight.html
@@ -12,9 +12,9 @@
 
 <!--trying to add profile pic-->
 <div class = "contentwrap">
-	
-	
-			<div class = "username">Insights and Correlation</div>
+	<div class = titleOfInsight>
+		<div class = "pageTitle">Insights and Correlation</div>
+	</div>
 
 
 	<div class = profilepic>
