--- a/insight.html
+++ b/insight.html
@@ -13,7 +13,7 @@
 <!--trying to add profile pic-->
 <div class = "contentwrap">
 	<div class = titleOfInsight>
-		<div class = "pageTitle">Insights and Correlation</div>
+		<div class = "pageTitleInsight">Insights and Correlation</div>
 	</div>
 
 
