--- a/insight.html
+++ b/insight.html
@@ -12,9 +12,7 @@
 
 <!--trying to add profile pic-->
 <div class = "contentwrap">
-	<div class = titleOfInsight>
-		<div class = "pageTitleInsight">Insights and Correlation</div>
-	</div>
+	<h1>Insight and Correlation</h1>
 
 
 	<div class = profilepic>
