--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,17 @@
   <link rel="stylesheet" href="style.css" />
   <title>Profile</title>
 </head>
-<body style="background:#E5E5E5;display: grid;">
+<br>
+<body style="background:#E5E5E5;display: grid;" >
+	
+    <div class = "contentwrap">
+	<div class = "wrapper" id = "profileinfo">
+		<div class ="profile">
+			<div class = "username">Hi, Matthew</div>
+			
+		</div>
+</div>
+
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
 		<label class = "profilename">Check up</label>
