--- a/insight.html
+++ b/insight.html
@@ -20,6 +20,20 @@
 		</div>
 </div>
 
+
+<div class = "contentwrap">
+	<div class = "wrapper" id = "insights">
+
+		
+		
+		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
+		
+	</div>
+
+
+
+
+
 	<div class = "contentwrap">
 		<div class = "nav">
 			<div class="button" onclick = "location.href='homepage.html';">
