--- a/insight.html
+++ b/insight.html
@@ -26,12 +26,22 @@
 
 		
 
-		
+
 		
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
 		
 	</div>
-
+	<div class = "contentwrap">
+		<div class = "wrapper" id = "Food">
+			
+			<label class = "summary" >“Stomach pain reported more often with higher levels of glucose consumption”</label>
+			
+			
+			<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
+			<div class = "avatar">
+				<img class="logo" src="avatar.png" width = "100px">
+			</div>
+		</div>
 
 
 
