--- a/insight.html
+++ b/insight.html
@@ -32,7 +32,7 @@
 		
 	</div>
 	<div class = "contentwrap">
-		<div class = "wrapper" id = "Food">
+		<div class = "wrapper" id = "insight">
 			
 			<label class = "summary" >“Stomach pain reported more often with higher levels of glucose consumption”</label>
 			
