--- a/insight.html
+++ b/insight.html
@@ -22,17 +22,16 @@
 
 
 <div class = "contentwrap">
-	<div class = "wrapper" id = "insight">
-			
-		<label class = "summary" >“Stomach pain reported more often with higher levels of glucose consumption”</label>
-		
-		
-		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
-		
 	
-		
+	<div class = "h" id = "Food">
+	
+		<label class = "summary" >“Stomach pain reported more often with higher levels of glucose consumption”</label>
+	
+		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
+	
 	</div>
 	
+
 
 
 
