--- a/insight.html
+++ b/insight.html
@@ -18,7 +18,22 @@
 		</div>
 </div>
 
+<div class = "contentwrap">
+	<div class = "wrapper" id = "checkup">
+		<label class = "profilename" style="color: purple;">Check up</label>
+		
 
+		<label class = "title" width="100%">How do you feel today?</label>
+		
+		<br>
+		<label class = "summary" >“Amazing great awesome<br> motivational quote here”</label>
+		
+		
+		<a class="gradient-button gradient-button-2" href ="#" id="log">Log your symptoms</a><br />
+		<div class = "avatar">
+			<img class="logo" src="avatar.png" width = "100px">
+		</div>
+	</div>
 	
 
 
