--- a/insight.html
+++ b/insight.html
@@ -19,8 +19,8 @@
 </div>
 
 <div class = "contentwrap">
-	<div class = "wrapper" id = "checkup">
-		<label class = "profilename" style="color: purple;">Check up</label>
+	<div class = "wrapper" id = "Food">
+		<label class = "profilename" style="color: rgb(0, 0, 0);">Food</label>
 		
 
 		<label class = "title" width="100%">How do you feel today?</label>
