--- a/insight.html
+++ b/insight.html
@@ -29,10 +29,8 @@
 		<label class = "summary" >“Amazing great awesome<br> motivational quote here”</label>
 		
 		
-		<a class="gradient-button gradient-button-2" href ="#" id="log">Log your symptoms</a><br />
-		<div class = "avatar">
-			<img class="logo" src="avatar.png" width = "100px">
-		</div>
+		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
+		
 	</div>
 	
 
