--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
 <body style="background:#E5E5E5;display: grid;">
 
 	<div class = "contentwrap">
-    <div class = "wrapper" id = "profileinfo">
+    <div class = "wrapper" id = "profile">
 		<div class ="profile">
 			<div class = "username">Your Log</div>
 				
