--- a/insight.html
+++ b/insight.html
@@ -20,14 +20,14 @@
 
 <div class = "contentwrap">
 	<div class = "wrapper" id = "Food">
-		<label class = "profilename" style="color: rgb(0, 0, 0);">Food</label>
+		<label class = "profilename" style="color: rgb(0, 0, 0) ;" style="font-style: bold;">Food</label>
 		
 
 		<label class = "title" width="100%">How do you feel today?</label>
 		
 		<br>
 		<label class = "summary" >“Amazing great awesome<br> motivational quote here”</label>
-		
+
 		
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
 		
