--- a/insight.html
+++ b/insight.html
@@ -19,14 +19,11 @@
 </div>
 
 <div class = "contentwrap">
-	<div class = "wrapper" id = "Food">
-		<label class = "profilename" style="color: rgb(0, 0, 0) ;" style="font-style: bold;">Food</label>
-		
-
-		<label class = "title" width="100%">How do you feel today?</label>
+	<div class = "wrapper" id = "Food">		
+		<label class = "title" width="100%">Food</label>
 		
 		<br>
-		<label class = "summary" >“Amazing great awesome<br> motivational quote here”</label>
+		<label class = "foodSec" >“Stomach pain reported more opten with higher levels of glucose intake”</label>
 
 		
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
