--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,14 @@
   <title>Profile</title>
 </head>
 <body style="background:#E5E5E5;display: grid;">
+
+	<div class = "wrapper" id = "profileinfo">
+		<div class ="profile">
+			<div class = "username">Your Log</div>
+			
+		</div>
+	</div>
+
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
 		<label class = "profilename">Check up</label>
