--- a/insight.html
+++ b/insight.html
@@ -23,15 +23,25 @@
 		<label class = "title" width="100%">Food</label>
 
 		<br>
-		<label class = "foodSec" >“Stomach pain reported more opten with higher levels of glucose intake”</label>
+		<label class = "foodSec" >Stomach pain reported more often with higher levels of glucose intake</label>
 
-		
+
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
 
 		
 	</div>
 	
+	<div class = "wrapper" id = "Food">		
+		<label class = "title" width="100%">Physical Activity</label>
 
+		<br>
+		<label class = "foodSec" >Less activity associated with more frequent headaches</label>
+
+
+		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
+
+		
+	</div>
 
 
 
