--- a/insight.html
+++ b/insight.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class = "contentwrap">
-	<div class = "wrapper" id = "Food">		
+	<div class = "wrapper" id = "insights">		
 		<label class = "title" width="100%">Food</label>
 
 		<br>
