--- a/insight.html
+++ b/insight.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class = "contentwrap">
-	<div class = "wrapper" id = "insights">		
+	<div class = "wrapper" id = "Food">		
 		<label class = "title" width="100%">Food</label>
 
 		<br>
@@ -31,6 +31,7 @@
 		
 	</div>
 	
+	<div class="contentwrap">
 	<div class = "wrapper" id = "Food">		
 		<label class = "title" width="100%">Physical Activity</label>
 
