--- a/insight.html
+++ b/insight.html
@@ -32,7 +32,7 @@
 	</div>
 	
 <div class="contentwrap">
-	<div class = "wrapper" id = "Food">		
+	<div class = "wrapper" id = "insights">		
 		<label class = "title" width="100%">Physical Activity</label>
 
 		<br>
