--- a/insight.html
+++ b/insight.html
@@ -30,7 +30,7 @@
 
 		
 	</div>
-	
+</div>	
 <div class="contentwrap">
 	<div class = "wrapper" id = "insights">		
 		<label class = "title" width="100%">Physical Activity</label>
@@ -45,7 +45,7 @@
 	</div>
 
 
-
+</div>
 
 	<div class = "contentwrap">
 		<div class = "nav">
