--- a/insight.html
+++ b/insight.html
@@ -23,7 +23,7 @@
 		<label class = "title" width="100%">Food</label>
 
 		<br>
-		<label class = "foodSec" >Stomach pain reported more often with higher levels of glucose intake</label>
+		<label class = "foodSec" >Stomach pain is reported more often with higher levels of glucose intake</label>
 
 
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
