--- a/profile.html
+++ b/profile.html
@@ -17,19 +17,32 @@
 		</div>
 	</div>
 
+
 	<div class = contentwrap>
+		
 	<div class = "wrapper" id = "checkup">
-		<label class = "profilename">Check up</label>
+		<label class = "title" width="100%">Log Entries</label>
+		
+		<br>
+		<label class = "summary" >Add entries of your symptoms <br> to gain new insights from your log</label>
+		
+		
+		<a class="gradient-button gradient-button-2" href ="#" id="log">Add new entry</a><br />
 	</div>
+
 	<div class = "wrapper" id = "goals">
 		<label class = "profilename">Goals</label>
 	</div>
+
+
 </div>
    <div class = contentwrap>
 	<div class = "wrapper" id = "insights">
 		<label class = "profilename">Insights</label>
 	</div>
 </div>
+
+
 	<div class = "contentwrap">
 		<div class = "nav">
 			<div class="button" onclick = "location.href='homepage.html';">
