--- a/profileinfo.html
+++ b/profileinfo.html
@@ -86,10 +86,10 @@
      <div class="list" style="overflow-y:scroll;height: 200px; ">
        <label class="title">A</label>
        <label id="1" class="task" onclick = "select(this.id);">
-           Illness 1
+           Arthiritis
      </label>
        <label id="2" class="task" onclick = "select(this.id);">
-            Illness 2
+            Asthma
      </label>
        <label id="3" class="task" onclick = "select(this.id);">
             Illness 3   
@@ -97,9 +97,9 @@
        <label id="4" class="task" onclick = "select(this.id);">  
         Illness 4   
      </label>
-    <label class="title">B</label>
+    <label class="title">T</label>
            <label id="5" class="task" onclick = "select(this.id);">
-           Illness 5
+           Type II Diabetes
      </label>
        <label id="6" class="task" onclick = "select(this.id);">
             Illness 6
