--- a/profile.html
+++ b/profile.html
@@ -10,8 +10,8 @@
 </head>
 <body style="background:#E5E5E5;display: grid;">
 
-	<div class = "wrapper" id = "profileinfo">
-		<div class ="profile">
+	<div class = "wrapper" id = "logheader">
+		<div class = "profilepic">
 			<div class = "username">Your Log</div>
 			
 		</div>
