--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
 <body style="background:#E5E5E5;display: grid;">
 
 	<div class = "wrapper" id = "logheader">
-		<div class = "profilepic">
+		<div class = "profile">
 			<div class = "username">Your Log</div>
 			
 		</div>
