--- a/profile.html
+++ b/profile.html
@@ -24,8 +24,9 @@
 		<br>
 		<label class = "summary" >Add entries of your symptoms <br> to gain new insights from your log</label>
 		
-		
-		<a class="gradient-button gradient-button-2" href ="#" id="log">Add new entry</a><br />
+		<div class="button" onclick = "location.href='homepage.html';">
+			<a class="gradient-button gradient-button-2" href ="#" id="log">Add new entry</a><br/>
+		</div>
 	</div>
 
 </div>
