--- a/profile.html
+++ b/profile.html
@@ -24,9 +24,7 @@
 		<br>
 		<label class = "summary" >Add entries of your symptoms <br> to gain new insights from your log</label>
 		
-		<div class="button" onclick = "location.href='homepage.html';">
-			<a class="gradient-button gradient-button-2" href ="#" id="log">Add new entry</a><br/>
-		</div>
+		<a class="gradient-button gradient-button-2" onclick = "location.href='homepage.html';" id="log">Add new entry</a><br/>
 	</div>
 
 </div>
