--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
 		<br>
 		<label class = "summary" >Add entries of your symptoms <br> to gain new insights from your log</label>
 		
-		<a class="gradient-button gradient-button-2" onclick = "location.href='homepage.html';" id="log">Add new entry</a><br/>
+		<a class="gradient-button gradient-button-2" onclick = "location.href='checkup.html';" id="log">Add new entry</a><br/>
 	</div>
 
 </div>
