--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,7 @@
 		<label class = "title" width="100%">Log Entries</label>
 		
 		<br>
-		<label class = "text" >Add entries of your symptoms <br> to gain new insights from your log</label>
+		<label class = "foodSec" >Add entries of your symptoms <br> to gain new insights from your log</label>
 		
 		<a class="gradient-button gradient-button-2" onclick = "location.href='checkup.html';" id="log">Add new entry</a><br/>
 	</div>
