--- a/profile.html
+++ b/profile.html
@@ -12,13 +12,13 @@
 
 	<div class = "wrapper" id = "logheader">
 		<div class = "profile">
-			<div class = "username">Your Log</div>
+			<div class = "title">Your Log</div>
 			
 		</div>
 	</div>
 
 	<div class = contentwrap>
-	<div class = "wrapper" id = "checkup">
+	<div class = "wrapper" id = "log entries">
 		<label class = "title" width="100%">Log Entries</label>
 		
 		<br>
@@ -27,12 +27,21 @@
 		<a class="gradient-button gradient-button-2" onclick = "location.href='checkup.html';" id="log">Add new entry</a><br/>
 	</div>
 
+
+	<div class = "wrapper" id = "entries">
+		
+
+	</div>
+
+
 </div>
    <div class = contentwrap>
 	<div class = "wrapper" id = "insights">
 		<label class = "profilename">Insights</label>
 	</div>
 </div>
+
+
 	<div class = "contentwrap">
 		<div class = "nav">
 			<div class="button" onclick = "location.href='homepage.html';">
