--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
 
 	<div class = "wrapper" id = "logheader">
 		<div class = "profile">
-			<div class = "title">Your Log</div>
+			<div class = "username">Your Log</div>
 			
 		</div>
 	</div>
@@ -27,7 +27,7 @@
 		<a class="gradient-button gradient-button-2" onclick = "location.href='checkup.html';" id="log">Add new entry</a><br/>
 	</div>
 
-
+	
 	<div class = "wrapper" id = "entries">
 		
 
