--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class = contentwrap>
-	<div class = "wrapper" id = "log entries">
+	<div class = "wrapper" id = "checkup">
 		<label class = "title" width="100%">Log Entries</label>
 		
 		<br>
@@ -28,10 +28,14 @@
 	</div>
 
 	
-	
+	<div class = "wrapper" id = "entries">
+		
 
+	</div>
 
 </div>
+
+
    <div class = contentwrap>
 	<div class = "wrapper" id = "insights">
 		<label class = "profilename">Insights</label>
