--- a/profile.html
+++ b/profile.html
@@ -25,6 +25,10 @@
 		<label class = "foodSec" >Add entries of your symptoms <br> to gain new insights from your log</label>
 		
 		<a class="gradient-button gradient-button-2" onclick = "location.href='checkup.html';" id="log">Add new entry</a><br/>
+
+		<div class = "avatar">
+			<img class="logo" src="1.png" width = "100px">
+		</div>
 	</div>
 
 	
