--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
                 <div class="multi-selector">
 
      <div class="select-field">
-<input type="text" name="" placeholder="Select an entry" id="" class="input-selector">
+<input type="text" name="" placeholder="Entries" id="" class="input-selector">
      <span class="down-arrow">&blacktriangledown;</span>
      </div>
 <!---------List of checkboxes and options----------->
