--- a/profile.html
+++ b/profile.html
@@ -95,6 +95,7 @@
 
 	 </script>
 
+	<a class="gradient-button gradient-button-2" onclick = "location.href='checkup.html';" id="log">See all entries</a><br/>
 	</div>
 
 </div>
