--- a/profile.html
+++ b/profile.html
@@ -37,7 +37,7 @@
         <label class = "title">Log History</label>
             <div class="multi-selector">
 
-				
+     <div class="select-field">
 <input type="text" name="" placeholder="Your entries" id="" class="input-selector">
      <span class="down-arrow">&blacktriangledown;</span>
      </div>
