--- a/homepage.html
+++ b/homepage.html
@@ -104,7 +104,7 @@
 				<div class = "icon"><img src="insight.png" width = "30px"></div>
 				<label>Insight</label>
 			</div>
-			<div class="button" onclick = "location.href='physical-checkup.html';">
+			<div class="button" onclick = "location.href='import/physical-checkup.html';">
 				<div class = "icon"><img src="checkup.png" width = "30px"></div>
 				<label>Checkup</label>
 			</div>
