--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -153,7 +153,7 @@
 .nav-buttons:hover .icon{
  filter: invert(100%);
 }
-.nav-buttons:active {
+.nav-buttons:active .icon{
  filter: invert(100%);
 }
 .nav-buttons:pressed .icon{
