--- a/insight.html
+++ b/insight.html
@@ -23,12 +23,15 @@
 		<label class = "title" width="100%">Food</label>
 
 		<br>
+		<br>
 		<label class = "foodSec" >Stomach pain is reported more often with higher levels of glucose intake</label>
 
 
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
 
-		
+		<div class = "avatar">
+			<img class="logo" src="food_1.png" width = "100px">
+		</div>
 	</div>
 </div>	
 <div class="contentwrap">
@@ -40,7 +43,10 @@
 
 
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
-
+		
+		<div class = "avatar">
+			<img class="logo" src="fitness.png" width = "100px">
+		</div>
 		
 	</div>
 
