--- a/insight.html
+++ b/insight.html
@@ -29,7 +29,7 @@
 
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
 
-		<div class = "avatar">
+		<div class = "insightPics">
 			<img class="logo" src="food_1.png" width = "100px">
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
 		
-		<div class = "avatar">
+		<div class = "insightPics">
 			<img class="logo" src="fitness.png" width = "100px">
 		</div>
 		
