--- a/insight.html
+++ b/insight.html
@@ -45,7 +45,7 @@
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
 		
 		<div class = "insightPics">
-			<img class="logo" src="fitness.png" width = "50px" height = "50px">
+			<img class="logo" src="fitness.png" width = "50px">
 		</div>
 		
 	</div>
