--- a/insight.html
+++ b/insight.html
@@ -29,7 +29,7 @@
 
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
 
-		<div class = "insightPics">
+		<div class = "insightFoodPic">
 			<img class="logo" src="food_1.png" width = "100px">
 		</div>
 	</div>
@@ -39,12 +39,13 @@
 		<label class = "title" width="100%">Physical Activity</label>
 
 		<br>
+		<br>
 		<label class = "foodSec" >Less activity associated with more frequent headaches</label>
 
 
 		<a class="gradient-button gradient-button-2" href ="#" id="log">See Details</a><br />
 		
-		<div class = "insightPics">
+		<div class = "insightFitnessPic">
 			<img class="logo" src="fitness.png" width = "70px">
 		</div>
 		
