--- a/profileinfo.html
+++ b/profileinfo.html
@@ -158,8 +158,42 @@
             <label id="D5" class="task" onclick = "select(this.id);">
                 Dry Mouth
           </label>
+    <!-----------------------------E-----------------------------> 
+    <label class="title">E</label>
+      <label id="E1" class="task" onclick = "select(this.id);">
+        Earache
+      </label>
+      <label id="E2" class="task" onclick = "select(this.id);">
+        Earwax Build-up
+      </label>
 
-          
+      <!-----------------------------F-----------------------------> 
+    <label class="title">F</label>
+    <label id="F1" class="task" onclick = "select(this.id);">
+      Fever
+    </label>
+    <label id="F2" class="task" onclick = "select(this.id);">
+      Food Poisoning
+    </label>
+
+    <!-----------------------------H-----------------------------> 
+    <label class="title">H</label>
+    <label id="H1" class="task" onclick = "select(this.id);">
+    Headaches
+</label>
+<label id="H2" class="task" onclick = "select(this.id);">
+     High Blood Pressure
+</label>
+<label id="H3" class="task" onclick = "select(this.id);">
+     High Cholestrol
+</label>
+ <label id="H4" class="task" onclick = "select(this.id);">
+     Hyperglycemia (High blood sugar)
+</label>
+     <label id="H5" class="task" onclick = "select(this.id);">
+         Hypoglycemia (Low blood sugar)
+   </label>
+
      <!-----------------------------M-----------------------------> 
      <label class="title">M</label>
            <label id="M1" class="task" onclick = "select(this.id);">
