--- a/profileinfo.html
+++ b/profileinfo.html
@@ -188,12 +188,29 @@
      High Cholestrol
 </label>
  <label id="H4" class="task" onclick = "select(this.id);">
-     Hyperglycemia (High blood sugar)
+     Hyperglycaemia (High blood sugar)
 </label>
      <label id="H5" class="task" onclick = "select(this.id);">
-         Hypoglycemia (Low blood sugar)
+         Hypoglycaemia (Low blood sugar)
    </label>
 
+       <!-----------------------------I-----------------------------> 
+       <label class="title">I</label>
+       <label id="I1" class="task" onclick = "select(this.id);">
+         Insomnia
+       </label>
+       <label id="I2" class="task" onclick = "select(this.id);">
+         Iron Deficiency Anemia
+       </label>
+
+      <!-----------------------------K-----------------------------> 
+       <label class="title">K</label>
+       <label id="K1" class="task" onclick = "select(this.id);">
+         Kidney Infection
+       </label>
+       <label id="K2" class="task" onclick = "select(this.id);">
+         Kidney Stones
+       </label>
      <!-----------------------------M-----------------------------> 
      <label class="title">M</label>
            <label id="M1" class="task" onclick = "select(this.id);">
