--- a/profileinfo.html
+++ b/profileinfo.html
@@ -211,6 +211,20 @@
        <label id="K2" class="task" onclick = "select(this.id);">
          Kidney Stones
        </label>
+
+
+       <!-----------------------------L-----------------------------> 
+    <label class="title">L</label>
+    <label id="L1" class="task" onclick = "select(this.id);">
+    Lactose Intolerance
+</label>
+<label id="L2" class="task" onclick = "select(this.id);">
+     Leg Cramps
+</label>
+<label id="L3" class="task" onclick = "select(this.id);">
+     Liver Disease
+</label>
+
      <!-----------------------------M-----------------------------> 
      <label class="title">M</label>
            <label id="M1" class="task" onclick = "select(this.id);">
@@ -223,6 +237,11 @@
             Migraine  
      </label>
     
+     <!-----------------------------N-----------------------------> 
+     <label class="title">N</label>
+           <label id="N1" class="task" onclick = "select(this.id);">
+           Nosebleed
+     </label>
     <!-----------------------------T-----------------------------> 
      <label class="title">T</label>
            <label id="8" class="task" onclick = "select(this.id);">
