--- a/profileinfo.html
+++ b/profileinfo.html
@@ -242,6 +242,29 @@
            <label id="N1" class="task" onclick = "select(this.id);">
            Nosebleed
      </label>
+
+
+     
+    <!-----------------------------O-----------------------------> 
+    <label class="title">O</label>
+    <label id="O1" class="task" onclick = "select(this.id);">
+    Obesity
+</label>
+<label id="O2" class="task" onclick = "select(this.id);">
+     Obsessive Compulsive Disorder (OCD)
+</label>
+
+<!-----------------------------S-----------------------------> 
+<label class="title">S</label>
+<label id="S1" class="task" onclick = "select(this.id);">
+Shortness of Breath
+</label>
+<label id="S2" class="task" onclick = "select(this.id);">
+ Sore Throat
+</label>
+<label id="S3" class="task" onclick = "select(this.id);">
+ Stomach Ache
+</label>
     <!-----------------------------T-----------------------------> 
      <label class="title">T</label>
            <label id="8" class="task" onclick = "select(this.id);">
@@ -250,9 +273,7 @@
        <label id="9" class="task" onclick = "select(this.id);">
             Type II Diabetes
      </label>
-       <label id="10" class="task" onclick = "select(this.id);">
-            Illness 7   
-     </label>
+      
      </div>
       <div class ="controls">
         <a class="gradient-button gradient-button-1" href ="#" onclick="back1()">Back</a><br />
