--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
 		<br>
 		<label class = "foodSec" >Add entries of your symptoms <br> to gain new insights from your log</label>
 		
-		<a class="gradient-button gradient-button-2" onclick = "location.href='physical-checkup.html';" id="log">Add new entry</a><br/>
+		<a class="gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
 
 		<div class = "avatar">
 			<img class="logo" src="1.png" width = "200px">
