--- a/login.html
+++ b/login.html
@@ -13,7 +13,11 @@
     
    </head>
    <body>
-      
+      <div class = "wrapper">
+        <div width = "50%" style="text-align:left;color: blue" onclick="location.href='onboarding.html'">
+          < Back
+        </div>
+     </div>
      <div class = "wrapper">
          <div class = "pic">
             <img src = "logo.png" width = 300px;>
