--- a/profileinfo.html
+++ b/profileinfo.html
@@ -292,7 +292,7 @@ Shortness of Breath
           </div>
           <div class = "writeup">
             <label class = "title">Add Contacts</label>
-              <a class="gradient-button gradient-button-2" href ="#" onclick="location.href('homepage.html')">Proceed</a><br />
+              <a class="gradient-button gradient-button-2" href ="homepage.html">Proceed</a><br />
           </div>
         </div>
     </div>
