--- a/checkup.html
+++ b/checkup.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <title>Checkup</title>
 </head>
-<body style="background:#E5E5E5;display: grid;">
+<body style="background:#ebeaf3;display: grid;">
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
 		<label class = "profilename">Check up</label>
