--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <title>Profile</title>
 </head>
-<body style="background:#E5E5E5;display: grid;">
+<body style="background:#ebeaf3;display: grid;">
 
 	<div class = "wrapper" id = "logheader">
 		<div class = "profile">
