--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Nov 22 2021 08:08:14 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Nov 22 2021 09:21:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6199bf0a853ab6a80c47bc09" data-wf-site="6199562479ca2ddc30e8e28f">
 <head>
   <meta charset="utf-8">
@@ -31,19 +31,19 @@
 }
 .part path:hover{
 	pointer-events: auto;
-  fill: rgba(146,81,247,0.3);
+  fill: rgba(146,81,247,0.2);
   stroke: rgba(146,81,247,0.25);
    transition-duration: 0.15s;
   transition-timing-function: ease-in-out;
 }
-.override { fill: rgba(146,81,247,0.6) !important}
+.override { fill: rgba(146,81,247,0.4) !important}
 </style>
   </div>
   <div class="w-layout-grid grid">
     <div id="w-node-af6b3c05-1a56-9997-e00c-ca32e613edb1-0c47bc09" class="hi-wrapper">
       <h1 class="heading">Physical Well Being Checkup</h1>
     </div>
-    <div id="w-node-af6b3c05-1a56-9997-e00c-ca32e613edb2-0c47bc09" class="profile-wrapper"><img src="images/matthew.png" loading="lazy" width="100" sizes="(max-width: 479px) 100vw, 100px" srcset="images/matthew-p-500.png 500w, images/matthew.png 960w" alt="" class="image"></div>
+    <div id="w-node-af6b3c05-1a56-9997-e00c-ca32e613edb2-0c47bc09" class="profile-wrapper"><img src="images/matthew.png" loading="lazy" width="100" sizes="100px" srcset="images/matthew-p-500.png 500w, images/matthew.png 960w" alt="" class="image"></div>
     <div id="w-node-_5da85a94-9579-637c-09f2-7cb0da371976-0c47bc09" class="widget-wrapper top">
       <div class="div-block">
         <h1 class="heading-2">Symptoms you&#x27;ve selected</h1>
@@ -55,14 +55,12 @@
         <h1 class="selected-part-name">Select a body part</h1>
         <h1 class="part-name">Hovered part</h1>
       </div>
-      <div class="ctrls">
-        <a href="#" class="reset-selection w-inline-block">
-          <div class="text-block-2">reset selection</div>
-        </a>
-        <a data-w-id="02901d52-a5b4-d036-0644-dbb7d0dce108" href="#" class="back-to-start w-inline-block">
-          <div class="text-block">back to start</div>
-        </a>
-      </div>
+      <a data-w-id="3079750d-b15a-0e31-25ad-91f83011f800" href="#" class="reset-selection w-inline-block"><img src="images/x-svgrepo-com.svg" loading="lazy" width="20" alt="" class="image-2">
+        <div class="text-block-4">Unselect part</div>
+      </a>
+      <a data-w-id="02901d52-a5b4-d036-0644-dbb7d0dce108" href="#" class="back-to-start w-inline-block"><img src="images/reset-svgrepo-com.svg" loading="lazy" width="20" alt="" class="image-3">
+        <div class="text-block-5">Back</div>
+      </a>
       <div data-w-id="92833de1-21a5-e63e-3bdd-b88fd9f88a0f" class="human">
         <a part-name="Left arm" href="#" class="body-part left-arm w-inline-block">
           <div class="body-embed w-embed"><svg xmlns="http://www.w3.org/2000/svg" class="part" width="100%" height="100%" viewbox="0 0 125.15 307.49">
@@ -244,7 +242,7 @@
                 </g>
               </g>
             </svg></div>
-        </a><img src="images/head.png" loading="lazy" sizes="(max-width: 991px) 100vw, 978.99462890625px" srcset="images/head-p-500.png 500w, images/head-p-800.png 800w, images/head.png 979w" alt="" class="body-img">
+        </a><img src="images/head.png" loading="lazy" sizes="(max-width: 991px) 100vw, 1070px" srcset="images/head-p-500.png 500w, images/head-p-800.png 800w, images/head.png 979w" alt="" class="body-img">
       </div>
     </div>
     <div id="w-node-_89a1d9bb-f3b4-f8bd-1ad6-67033c7daaef-0c47bc09" class="nav-wrapper">
