changed file name

--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -255,7 +255,7 @@
       <a href="#" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Insights</div>
       </a>
-      <a href="index.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
+      <a href="physical-checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
         <div class="tab-label">Checkup</div>
       </a>
       <a href="#" class="nav-buttons w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
