--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -246,19 +246,19 @@
       </div>
     </div>
     <div id="w-node-_89a1d9bb-f3b4-f8bd-1ad6-67033c7daaef-0c47bc09" class="nav-wrapper">
-      <a href="#" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Home</div>
       </a>
-      <a href="#" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Goals</div>
       </a>
-      <a href="#" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../insight.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Insights</div>
       </a>
       <a href="physical-checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
         <div class="tab-label">Checkup</div>
       </a>
-      <a href="#" class="nav-buttons w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../profile.html" class="nav-buttons w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Log History</div>
       </a>
     </div>
