changed bg colors

--- a/goals.html
+++ b/goals.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <title>Goals</title>
 </head>
-<body style="background:#ebeaf3;display: grid;">
+<body style="background:#eeedf3;display: grid;">
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
 		<label class = "profilename">Check up</label>
