--- a/insight.html
+++ b/insight.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <title>Insight</title>
 </head>
-<body style="background:#ebeaf3;display: grid;">
+<body style="background:#eeedf3;display: grid;">
 
 <!--trying to add profile pic-->
 <div class = "contentwrap">
