--- a/profile.html
+++ b/profile.html
@@ -42,7 +42,7 @@
      <span class="down-arrow">&blacktriangledown;</span>
      </div>
 <!---------List of checkboxes and options----------->
-     <div class="list" style="overflow-y:scroll;height: 200px; ">
+     <div class="listdrop" style="overflow-y:scroll;height: 200px; ">
        <label class="title"></label>
 
        <label id="1" class="task" onclick = "select(this.id);">
