--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
    </head>
    <body>
       <div class = "wrapper">
-        <div width = "50%" style="text-align:left;color: blue" onclick="location.href='onboarding.html'">
+        <div width = "50%" style="text-align:left;color: blue" onclick="location.href='index.html'">
           < Back
         </div>
       </div>
