--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,6 @@
 	<div class = "wrapper" id = "logheader">
 		<div class = "profile">
 			<div class = "username">Your Log</div>
-			<div id="w-node-af6b3c05-1a56-9997-e00c-ca32e613edb2-0c47bc09" class="profile-wrapper"><img src="images/matthew.png" loading="lazy" width="100" sizes="100px" srcset="images/matthew-p-500.png 500w, images/matthew.png 960w" alt="" class="image"></div>
 			
 		</div>
 	</div>
@@ -85,6 +84,10 @@
 
 	</div>
 
+</div>
+
+
+   <div class = contentwrap>
 	<div class = "wrapper" id = "insights">
 		<label class = "profilename">Insights</label>
 	</div>
