--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,12 @@
 </head>
 <body style="background:#eeedf3;display: grid;">
 
-	
+	<div class = "wrapper" id = "logheader">
+		<div class = "profile">
+			<div class = "username">Your Log</div>
+			
+		</div>
+	</div>
 
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
