--- a/profile.html
+++ b/profile.html
@@ -32,7 +32,7 @@
 	</div>
 
 	
-	<div class = "wrapper" id = "goals">
+	<div class = "wrapper" id = "checkup">
 
         <label class = "title">Log History</label>
             <div class="multi-selector">
