--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <title>Profile</title>
 </head>
-<body style="background:#eeedf3;display: grid;">
+<body style="background:#E5E5E5;display: grid;">
 
 	<div class = "wrapper" id = "logheader">
 		<div class = "profile">
@@ -20,7 +20,21 @@
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
 		<label class = "title" width="100%">Log Entries</label>
-		<label class = "title">Log History</label>
+		<br>
+		<br>
+		<label class = "foodSec" >Add entries of your symptoms <br> to gain new insights from your log</label>
+		
+		<a class="gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
+
+		<div class = "avatar">
+			<img class="logo" src="1.png" width = "200px">
+		</div>
+	</div>
+
+	
+	<div class = "wrapper" id = "goals">
+
+        <label class = "title">Log History</label>
             <div class="multi-selector">
 
      <div class="select-field">
@@ -28,7 +42,7 @@
      <span class="down-arrow">&blacktriangledown;</span>
      </div>
 <!---------List of checkboxes and options----------->
-     <div class="listdrop" style="overflow-y:scroll;height: 200px; ">
+     <div class="list" style="overflow-y:scroll;height: 200px; ">
        <label class="title"></label>
 
        <label id="1" class="task" onclick = "select(this.id);">
@@ -63,24 +77,12 @@
      document.querySelector('.select-field').addEventListener('click',()=>{
          document.querySelector('.list').classList.toggle('show');
          
-	 });
+
+     });
 
 	 </script>
 
 	</div>
-		<label class = "foodSec" >Add entries of your symptoms <br> to gain new insights from your log</label>
-		
-		<a class="gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
-
-		<div class = "avatar">
-			<img class="logo" src="1.png" width = "200px">
-		</div>
-	</div>
-
-	
-	<div class = "wrapper" id = "goals">
-
-        
 
 </div>
 
