--- a/profile.html
+++ b/profile.html
@@ -75,7 +75,7 @@
     <script>
 
      document.querySelector('.select-field').addEventListener('click',()=>{
-         document.querySelector('.list').classList.toggle('show');
+         document.querySelector('.list').classList.toggle('hide');
          
 
      });
