--- a/profile.html
+++ b/profile.html
@@ -84,10 +84,12 @@
 
 	</div>
 
-	<div class = "wrapper" id = "insights">
-		<label class = "profilename">Insights</label>
 </div>
 
+
+   <div class = contentwrap>
+		<label class = "profilename">Insights</label>
+	</div>
 </div>
 
 
