--- a/profile.html
+++ b/profile.html
@@ -88,7 +88,7 @@
 
 
    <div class = contentwrap>
-	<div class = "wrapper" id = "insight">
+	<div class = "wrapper" id = "tab2">
 		<label class = "profilename">Insights</label>
 	</div>
 </div>
