--- a/profile.html
+++ b/profile.html
@@ -87,8 +87,8 @@
 </div>
 
 
-   <div class = contentwrap>
-	<div class = "wrapper" id = "tab2">
+   <div class = contentwrap id = "tab2">
+	<div class = "wrapper" id = "insights">
 		<label class = "profilename">Insights</label>
 	</div>
 </div>
