--- a/profile.html
+++ b/profile.html
@@ -32,6 +32,7 @@
 	</div>
 
 	
+	<div class = "contentwrap" id = "tab2">
 	<div class = "wrapper" id = "goals">
 
         <label class = "title">Log History</label>
@@ -84,13 +85,11 @@
 
 	</div>
 
-</div>
-
-
-   <div class = contentwrap id = "tab2">
-	<div class = "wrapper" id = "insights">
-		<label class = "profilename">Insights</label>
+		<div class = "wrapper" id = "insights">
+			<label class = "profilename">Insights</label>
 	</div>
+
+</div>
 </div>
 
 
