--- a/profile.html
+++ b/profile.html
@@ -87,7 +87,7 @@
 		<div class = "wrapper" id = "insights">
 			<label class = "profilename">Insights</label>
 
-			<label>class = "foodSec" >Add entries of your symptoms <br> to gain new insights from your log</label>
+			<label class = "foodSec" >Add entries of your symptoms <br> to gain new insights from your log</label>
 		
 			<a class="gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
 	</div>
