--- a/profile.html
+++ b/profile.html
@@ -32,6 +32,7 @@
 	</div>
 
 	
+	<div class = "contentwrap" id = col2>
 	<div class = "wrapper" id = "goals">
 
         <label class = "title">Log History</label>
@@ -86,11 +87,10 @@
 
 		<div class = "wrapper" id = "insights">
 			<label class = "profilename">Insights</label>
-
-			<label class = "foodSec" >Add entries of your symptoms <br> to gain new insights from your log</label>
 		
 			<a class="gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
 	</div>
+</div>
 </div>
 
 
