--- a/profile.html
+++ b/profile.html
@@ -32,7 +32,7 @@
 	</div>
 
 	
-	<div class = "contentwrap" id = col2>
+	<div class = "contentwrap" id = tab2>
 	<div class = "wrapper" id = "goals">
 
         <label class = "title">Log History</label>
