--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
             <div class="multi-selector">
 
      <div class="select-field">
-<input type="text" name="" placeholder="Your entries" id="" class="input-selector">
+<input type="text" name="" placeholder="Click on a date to see your entries" id="" class="input-selector">
      <span class="down-arrow">&blacktriangledown;</span>
      </div>
 <!---------List of checkboxes and options----------->
@@ -85,7 +85,7 @@
 
 
 	<div class = "wrapper" id = "insights">
-	<label class = "profilename">Insights</label>
+	<label class = "profilename">Key Insights</label>
 	</div>
 
 	</div>
