--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
 
 
 	<div class = "wrapper" id = "insights">
-	<label class = "profilename">Key Insights</label>
+	<label class = "title" width = 100%>Key Insights</label>
 	</div>
 
 	</div>
