--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,16 @@
   <link rel="stylesheet" href="style.css" />
   <title>Profile</title>
 </head>
+
 <body style="background:#eeedf3;display: grid;">
+
+	<div class = "contentwrap">
+		<div class = "wrapper" id = "profileinfo">
+	</div>
+		<div class = profilepic>
+				<img class = "logo" src="matthew.png" width = "100px">
+			</div>
+	</div>
 
 	<div class = "wrapper" id = "logheader">
 		<div class = "profile">
