--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
 
 <body style="background:#eeedf3;display: grid;">
 
-	<div class = "wrapper" id = "logheader">
+	<div class = "wrapper" id = "profileinfo">
 		<div class = "profile">
 			<div class = "username">Your Log</div>
 		</div>
